--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.34.1"
+  },
+  "resolutions": {
+    "strip-ansi": "^6.0.0"
   }
 }
