--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/react-dom": "^18.2.25",
     "@types/react-modal": "^3.16.3",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "cypress": "^13.15.0",
     "eslint": "^8.57.1",
     "eslint-config-standard-with-typescript": "^37.0.0",
     "eslint-plugin-import": "^2.29.1",
