--- a/package.json
+++ b/package.json
@@ -48,8 +48,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.34.1",
-    "start-server-and-test": "^2.0.8"
+    "eslint-plugin-react": "^7.34.1"
   },
   "resolutions": {
     "strip-ansi": "^6.0.0"
