--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-react": "^7.34.1"
   },
   "resolutions": {
-    "strip-ansi": "^6.0.0"
+    "strip-ansi": "^6.0.0",
+    "string-width": "^4.0.0"
   }
 }
