--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lint": "eslint --ext .ts,.tsx,.js,.jsx .",
     "lint:fix": "eslint --fix --ext .ts,.tsx,.js,.jsx .",
     "type-check": "tsc --noEmit",
-    "test": "yarn dev & wait-on http://localhost:8000 && cypress run && pkill -f 'yarn dev'"
+    "test": "yarn dev & wait-on http://localhost:8000 && cypress run"
   },
   "dependencies": {
     "@types/node": "^22.7.5",
