--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
   "type": "module",
   "scripts": {
     "dev": "yarn next dev --port 8000",
+    "server": "http-server ./out/ --port 8000",
     "build": "next build",
     "lint": "eslint --ext .ts,.tsx,.js,.jsx .",
     "lint:fix": "eslint --fix --ext .ts,.tsx,.js,.jsx .",
     "type-check": "tsc --noEmit",
-    "test": "yarn dev & wait-on http://localhost:8000 && cypress run"
+    "test": "yarn server & wait-on http://localhost:8000 && cypress run"
   },
   "dependencies": {
     "@types/node": "^22.7.5",
@@ -49,6 +50,7 @@
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.34.1",
+    "http-server": "^14.1.1",
     "wait-on": "^8.0.1"
   },
   "resolutions": {
