--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "lint": "eslint --ext .ts,.tsx,.js,.jsx .",
     "lint:fix": "eslint --fix --ext .ts,.tsx,.js,.jsx .",
     "type-check": "tsc --noEmit",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
     "test": "yarn server & wait-on http://localhost:8000 && cypress run",
     "test:dev": "yarn dev & wait-on http://localhost:8000 && cypress run"
   },
