CYPRESS_CACHE_FOLDER: ./.cypress-cache/

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,3 +43,5 @@ jobs:
         run: yarn build
       - name: Test
         run: yarn test
+        env:
+          CYPRESS_CACHE_FOLDER: ./.cypress-cache/
