--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ env:
   CI: 'true'
 
 jobs:
-  check:
+  ci:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
@@ -28,13 +28,14 @@ jobs:
         id: cypress_cache_id
         uses: actions/cache@v4
         with:
-          path: ./.cypress-cache/
+          path: ~/.cache/Cypress/
           key: cypress-${{ matrix.node-version }}-${{ hashFiles('./**/yarn.lock') }}
       - name: Install dependencies
-        if: steps.node_modules_cache_id.outputs.cache-hit != 'true' || steps.cypress_cache_id.outputs.cache-hit != 'true'
+        if: steps.node_modules_cache_id.outputs.cache-hit != 'true'
         run: yarn install --frozen-lockfile --non-interactive
-        env:
-          CYPRESS_CACHE_FOLDER: ./.cypress-cache/
+      - name: Cache cypress
+        if: steps.cypress_cache_id.outputs.cache-hit != 'true'
+        run: yarn cypress install
       - name: Type check
         run: yarn type-check
       - name: Linter check
@@ -43,5 +44,3 @@ jobs:
         run: yarn build
       - name: Test
         run: yarn test
-        env:
-          CYPRESS_CACHE_FOLDER: ./.cypress-cache/
