--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           path: ./node_modules/
           key: node-modules-${{ matrix.node-version }}-${{ hashFiles('./**/yarn.lock') }}
-      - name: Cache cypress
+      - name: Cache Cypress binary
         id: cypress_cache_id
         uses: actions/cache@v4
         with:
@@ -33,14 +33,18 @@ jobs:
       - name: Install dependencies
         if: steps.node_modules_cache_id.outputs.cache-hit != 'true'
         run: yarn install --frozen-lockfile --non-interactive
-      - name: Cache cypress
+      - name: Install Cypress binary
         if: steps.cypress_cache_id.outputs.cache-hit != 'true'
         run: yarn cypress install
       - name: Type check
         run: yarn type-check
       - name: Linter check
         run: yarn lint
-      - name: Test build
+      - name: Build
         run: yarn build
+      - name: Run server
+        run: |
+          yarn server &
+          yarn wait-on-server
       - name: Test
-        run: yarn test
+        run: yarn cypress:run
