--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -44,7 +44,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-
       - name: Install dependencies
-        run: yarn install --frozen-lockfile --non-interactive --production
+        run: yarn install --frozen-lockfile --non-interactive
       - name: Build with Next.js
         run: SUB_DIRECTORY='' yarn build
       - name: Upload artifact
